# homeassistant-basestation

./: .devcontainer.json  .gitignore  README.md  hacs.json  manifest.json  pyproject.toml
.github/workflows/: validate-hacs.yml  validate-hassfest.yml  validate.yml
custom_components/basestation/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  sensor.py  services.py  services.yaml  switch.py  utils.py
custom_components/basestation/translations/: de.json  en.json  es.json  fr.json
scripts/: _common  debug  develop  setup
